perf(engine): size the buffer pool from a measurement
The cap counted one peer's pipeline where it should count every peer: a
block holds a buffer from the moment its read begins. Measured at 117 of
144 against a real swarm, so a faster link would have hit the cap and
throttled the download without breaking anything visible.

The same runs found the listener missing SO_REUSEADDR, which would make a
restarted client skip its own port, and confirmed zero pinned carriers,
6-8 MB of live heap and no allocation on the block path.

Closes B-26.